[package]
name = "mieszkania-deployment"
version = "0.1.0"
authors = ["kacper-marzecki <60017757+kacper-marzecki@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
envconfig = "0.6.0"
envconfig_derive = "0.6.0"
rustyline = "6.0.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = "1.0.104"
    # json
serde_json = "1.0.46"
    # serde macros
serde_derive = "1.0.104"